<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/Tollens_nuit_polaire"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="parent" />

        <ImageView
        android:id="@+id/imageview_logo"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_login"
        app:layout_constraintBottom_toTopOf="@+id/edittext_username"
        app:srcCompat="@drawable/logo_multilanguage" />

        <EditText
            android:id="@+id/edittext_username"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:shadowColor="@color/design_default_color_background"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/design_default_color_background"
            android:textColorHint="@color/design_default_color_background"
            app:layout_constraintTop_toBottomOf="@+id/imageview_logo" />

        <EditText
            android:id="@+id/edittxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/design_default_color_background"
            android:textColorHint="@color/design_default_color_background"
            app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="true"
            android:text="@string/action_login"
            app:layout_constraintTop_toBottomOf="@+id/edittxt_password" />

        <ProgressBar
            android:id="@+id/progressbar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edittxt_password"
            app:layout_constraintStart_toStartOf="@+id/edittxt_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>